[gd_scene load_steps=23 format=3 uid="uid://c8on0ngoa3108"]

[ext_resource type="Theme" uid="uid://caf1fphx2xqt0" path="res://assets/themes/main_menu.tres" id="1_2h7x4"]
[ext_resource type="Script" uid="uid://dw5gwf5bgcody" path="res://scenes/main_menu/main_menu.gd" id="1_p06gh"]
[ext_resource type="Texture2D" uid="uid://nng31j22g6fh" path="res://assets/images/icons/play.svg" id="2_n3hsc"]
[ext_resource type="Texture2D" uid="uid://m5gaiq7pjwbv" path="res://assets/images/icons/settings.svg" id="3_8dqwy"]
[ext_resource type="Script" uid="uid://bxkvsjo4eq44k" path="res://scenes/main_menu/show_version.gd" id="3_kmn6w"]
[ext_resource type="Texture2D" uid="uid://c4b2m50txi00g" path="res://icon.svg" id="3_kq7as"]
[ext_resource type="Texture2D" uid="uid://tkfbioukscgd" path="res://assets/images/icons/git.svg" id="4_nuriq"]
[ext_resource type="Texture2D" uid="uid://cmrheauks0nru" path="res://assets/images/icons/cross.svg" id="5_nidys"]
[ext_resource type="PackedScene" uid="uid://cropshnueuiqr" path="res://scenes/main_menu/settings/settings.tscn" id="8_1n7gf"]
[ext_resource type="Texture2D" uid="uid://crtp1xg7nyhki" path="res://assets/images/icons/folder.svg" id="8_cvdmj"]
[ext_resource type="PackedScene" uid="uid://bx5lej1m0kvgb" path="res://scenes/main_menu/select_scenario.tscn" id="9_lii3m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pfoy0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_03gfj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_csy66"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sqo3r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5i3ky"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_it8v6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bufrq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_46pqr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mk0sv"]

[sub_resource type="Theme" id="Theme_8521u"]
Button/font_sizes/font_size = 24
CheckButton/styles/disabled = SubResource("StyleBoxEmpty_pfoy0")
CheckButton/styles/hover = SubResource("StyleBoxEmpty_03gfj")
CheckButton/styles/hover_pressed = SubResource("StyleBoxEmpty_csy66")
CheckButton/styles/normal = SubResource("StyleBoxEmpty_sqo3r")
CheckButton/styles/pressed = SubResource("StyleBoxEmpty_5i3ky")
ColorPickerButton/font_sizes/font_size = 16
ColorPickerButton/styles/disabled = SubResource("StyleBoxEmpty_it8v6")
ColorPickerButton/styles/focus = SubResource("StyleBoxEmpty_bufrq")
ColorPickerButton/styles/hover = SubResource("StyleBoxEmpty_46pqr")
ColorPickerButton/styles/normal = SubResource("StyleBoxEmpty_mk0sv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5srfh"]
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 1)

[node name="MainMenu" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2h7x4")
script = ExtResource("1_p06gh")

[node name="LeftControl" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 140

[node name="VBoxContainer" type="VBoxContainer" parent="LeftControl"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="LeftControl/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="VBoxContainer" type="VBoxContainer" parent="LeftControl/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="LeftControl/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "Libre Aim"

[node name="Label" type="Label" parent="LeftControl/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.662745, 0.662745, 0.662745, 1)
theme_override_font_sizes/font_size = 16
text = "Version"
script = ExtResource("3_kmn6w")

[node name="Icon" type="TextureRect" parent="LeftControl/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(84, 84)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_kq7as")
expand_mode = 1

[node name="Play" type="Button" parent="LeftControl/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Play"
icon = ExtResource("2_n3hsc")
alignment = 0

[node name="Settings" type="Button" parent="LeftControl/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Settings"
icon = ExtResource("3_8dqwy")
alignment = 0

[node name="UserFolder" type="Button" parent="LeftControl/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "User folder"
icon = ExtResource("8_cvdmj")
alignment = 0

[node name="SourceCode" type="Button" parent="LeftControl/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Source code"
icon = ExtResource("4_nuriq")
alignment = 0

[node name="Quit" type="Button" parent="LeftControl/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Quit"
icon = ExtResource("5_nidys")
alignment = 0

[node name="RightControl" type="Panel" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_8521u")
theme_override_styles/panel = SubResource("StyleBoxFlat_5srfh")

[node name="SelectScenario" parent="RightControl" instance=ExtResource("9_lii3m")]
layout_mode = 1

[node name="Settings" parent="RightControl" instance=ExtResource("8_1n7gf")]
visible = false
layout_mode = 1

[connection signal="pressed" from="LeftControl/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="LeftControl/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="LeftControl/VBoxContainer/UserFolder" to="." method="_on_user_folder_pressed"]
[connection signal="pressed" from="LeftControl/VBoxContainer/SourceCode" to="." method="_on_source_code_pressed"]
[connection signal="pressed" from="LeftControl/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
